Add SolrService and implement schema field creation and indexing